# ewwii

./: 404.html  :w  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EWW-LICENSE  README.md  TODO.md  cargo_out.txt  flake.nix  getting_started.html  heaptrack.ewwii.320299.zst  index.html  installation.html  introduction.html  print.html  rust-toolchain.toml  rustfmt.toml  searchindex.js  searchindex.json  statictranspl.html  toc.html  toc.js  troubleshooting.html
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  module-request.yml
.github/workflows/: build.yml  gh-pages.yml
commands/: advanced_commands_intro.html  call_fns.html  update.html
config/: config_and_syntax.html  config_fundamentals.html  configuration.html  expression_language.html  rendering_and_best_practices.html  variables.html
copy/eww/: Cargo.toml
copy/eww/src/: app.rs  display_backend.rs  error_handling_ctx.rs  file_database.rs  ipc_server.rs  main.rs  opts.rs  paths.rs  script_var_handler.rs  server.rs  window_arguments.rs
copy/old_widgets/: window.rs
copy/simplexpr/: Cargo.toml
copy/simplexpr/src/: dynval.rs  error.rs  simplexpr_parser.lalrpop
copy/yuck/: Cargo.toml
copy/yuck/src/: ast_error.rs  error.rs
crates/duck/: Cargo.toml
crates/duck/src/config/: file_provider.rs  toplevel.rs
crates/eww/: Cargo.toml
crates/eww/src/: app.rs  error_handling_ctx.rs  ipc_server.rs  main.rs  opts.rs  paths.rs  server.rs  window_arguments.rs  window_initiator.rs
crates/eww_shared_util/: Cargo.toml
crates/ewwii/: Cargo.toml  build.rs
crates/ewwii/src/: app.rs  application_lifecycle.rs  client.rs  daemon_response.rs  diag_error.rs  display_backend.rs  dynval.rs  error_handling_ctx.rs  file_database.rs  gen_diagnostic_macro.rs  ipc_server.rs  main.rs  opts.rs  paths.rs  plugin.rs  property.rs  property_macro.rs  server.rs  util.rs  window_arguments.rs  window_initiator.rs
crates/ewwii/src/config/: ewwii_config.rs  iirhai_structs.rs  mod.rs  scss.rs
crates/ewwii/src/state/: scope.rs  scope_graph.rs  test.rs
crates/ewwii/src/updates/: api.rs  listen.rs  mod.rs  poll.rs  script.rs
crates/ewwii/src/widgets/: animation.rs  build_widget.rs  circular_progressbar.rs  def_widget_macro.rs  ewwii_image.rs  ewwii_label.rs  graph.rs  mod.rs  transform.rs  widget_definitions.rs  widget_definitions_helper.rs  widget_defintions.rs  window.rs
crates/ewwii/src/window/: backend_window_options.rs  coords.rs  mod.rs  monitor.rs  window_definition.rs  window_geometry.rs
crates/ewwii_plugin_api/: Cargo.toml  README.md
crates/ewwii_plugin_api/src/: example.rs  export.rs  export_macros.rs  lib.rs  rhai_backend.rs  widget_backend.rs
crates/ewwii_shared_util/: Cargo.toml
crates/ewwii_shared_util/src/: general_helper.rs  lib.rs
crates/iirhai/: Cargo.toml
crates/iirhai-daemon/: Cargo.toml
crates/iirhai/src/: builtins.rs  daemon.rs  error.rs  helper.rs  ipc_manager.rs  lib.rs  module_resolver.rs  parser.rs  widgetnode.rs
crates/iirhai/src/providers/: builtin_signals.rs  mod.rs
crates/iirhai/src/providers/apilib/: linux.rs  mod.rs  wifi.rs
crates/iirhai/src/providers/helper/: mod.rs
crates/iirhai/src/providers/stdlib/: command.rs  env.rs  json.rs  math.rs  mod.rs  monitor.rs  text.rs
crates/iirhai/src/updates/: listen.rs  mod.rs  poll.rs
crates/iirhaixpr/: Cargo.toml
crates/iirhaixpr/src/: builtins.rs  format_diagnostic.rs  widgetnode.rs
crates/luaxpr/: Cargo.toml
crates/luaxpr/src/: lib.rs
crates/nbcl_impl/: Cargo.toml
crates/nbcl_impl/src/: builtins.rs  errors.rs  lib.rs  parser.rs  translate.rs
crates/nbcl_impl/src/libraries/: mod.rs
crates/nbcl_impl/src/libraries/apilib/: linux.rs  mod.rs  wifi.rs
crates/nbcl_impl/src/libraries/corelib/: command.rs  env.rs  json.rs  mod.rs  regex.rs
crates/plugin_api/: Cargo.toml  README.md
crates/plugin_api/src/: bridge.rs  example.rs  export_macros.rs  lib.rs  proxy.rs
crates/plugin_api/src/bridge/: future.rs  handlers.rs  ipc.rs  library.rs  mod.rs  paths.rs  registration.rs  shared.rs
crates/rhai_impl/: Cargo.toml
crates/rhai_impl/src/: ast.rs  ast_impl.rs  builtins.rs  callback.rs  dyn_id.rs  error.rs  helper.rs  lib.rs  module_resolver.rs  parser.rs
crates/rhai_impl/src/providers/: mod.rs
crates/rhai_impl/src/providers/apilib/: linux.rs  mod.rs  slib.rs  wifi.rs
crates/rhai_impl/src/providers/stdlib/: command.rs  env.rs  mod.rs  monitor.rs  regex.rs  text.rs
crates/rhai_impl/src/updates/: api.rs  listen.rs  localsignal.rs  mod.rs  poll.rs  variable.rs
crates/shared_utils/: Cargo.toml
crates/shared_utils/src/: ast.rs  ast_impl.rs  extract_props.rs  lib.rs  locale.rs  prop.rs  prop_utils.rs  slib_store.rs  template.rs  variables.rs
docs/: README.md  book.toml
docs/book/: 404.html  getting_started.html  index.html  installation.html  introduction.html  print.html  searchindex.js  statictranspl.html  toc.html  toc.js  troubleshooting.html
docs/src/: SUMMARY.md  concepts.md  configuration.md  defining_widgets.md  eww.md  expression_language.md  getting_started.md  installation.md  introduction.md  layouts.md  statictranspl.md  styling_widgets.md  troubleshooting.md  working_with_gtk.md
docs/theme/: ewwii.css
examples/: common_layouts.html  examples.html  interactive.html  starter_bar.html  theming.html  wifi_manager.html
examples/activateLinux/: ewwii.nbcl  ewwii.rhai  ewwii.scss
examples/data-structures/: ewwii.nbcl  ewwii.rhai
examples/eww-bar/: eww.rhai  ewwii.rhai  ewwii.scss
examples/ewwii-bar/: ewwii.nbcl  ewwii.rhai  ewwii.scss
examples/kitchen-sink/: ewwii.rhai
examples/modules/: ewwii.rhai  ewwii.scss
licenses/: README.md  eww-MIT.txt
modules/: apilib.html  global.html  modules.html  stdlib.html  user_defined.html
theming/: styling_widgets.html  theming_and_ui.html  working_with_gtk.html
tools/: README.md
tools/generate-rhai-docs/: .gitignore  Cargo.toml
tools/scan_prop_proc/: Cargo.toml
tools/scan_prop_proc/src/: lib.rs
tools/veryimptest/: Cargo.toml
widgets/: props.html  widgets.html  widgets_and_params.html
(+95 files in other folders)
