[workspace]
members = ["crates/*", "tools/*"]
resolver = "2"

[workspace.dependencies]

shared_utils = { version = "0.1.0", path = "crates/shared_utils" }
rhai_impl = { version = "0.1.0", path = "crates/rhai_impl" }

anyhow = "1.0.86"
ahash = "0.8.12"
bincode = "1.3.3"
bytesize = "2.0.1"
cached = "0.53.1"
chrono = "0.4.38"
chrono-tz = "0.10.0"
clap = { version = "4.5.1", features = ["derive"] }
clap_complete = "4.5.12"
codespan-reporting = "0.11"
derive_more = { version = "1", features = [
    "as_ref",
    "debug",
    "display",
    "from",
    "from_str",
] }
extend = "1.2"
futures = "0.3.30"
grass = "0.13.4"
gtk = "0.18.1"
insta = "1.7"
itertools = "0.13.0"
jaq-core = "1.5.1"
jaq-parse = "1.0.3"
jaq-std = "1.6.0"
jaq-interpret = "1.5.0"
jaq-syn = "1.6.0"
libc = "0.2"
log = "0.4"
nix = "0.29.0"
notify = "6.1.1"
once_cell = "1.19"
pretty_assertions = "1.4.0"
pretty_env_logger = "0.5.0"
ref-cast = "1.0.22"
regex = "1.10.5"
rhai = { version = "1.22.2", features = ["internals"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
simple-signal = "1.1"
smart-default = "0.7.1"
static_assertions = "1.1.0"
strsim = "0.11"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.39.2", features = ["full"] }
unescape = "0.1"
wait-timeout = "0.2"

[profile.dev]
split-debuginfo = "unpacked"
