[workspace]
members = ["crates/*", "tools/*", "proc_macros/*"]
resolver = "2"

[workspace.dependencies]

shared_utils = { version = "0.1.0", path = "crates/shared_utils" }
rhai_impl = { version = "0.1.0", path = "crates/rhai_impl" }
scan_prop_proc = { version = "0.1.0", path = "proc_macros/scan_prop_proc" }
ewwii_plugin_api = { version = "0.7.0", path = "crates/ewwii_plugin_api" }

anyhow = "1.0.86"
ahash = "0.8.12"
bincode = "1.3.3"
bytesize = "2.0.1"
clap = { version = "4.5.1", features = ["derive"] }
clap_complete = "4.5.12"
codespan-reporting = "0.11"
derive_more = { version = "1", features = [
    "as_ref",
    "debug",
    "display",
    "from",
    "from_str",
] }
extend = "1.2"
futures = "0.3.30"
grass = "0.13.4"
gtk4 = { version = "0.10.3", features = ["v4_18"] }
itertools = "0.13.0"
libc = "0.2"
log = "0.4"
nix = "0.29.0"
notify = "6.1.1"
once_cell = "1.19"
pretty_assertions = "1.4.0"
pretty_env_logger = "0.5.0"
regex = "1.10.5"
rhai = "1.23.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
simple-signal = "1.1"
smart-default = "0.7.1"
static_assertions = "1.1.0"
thiserror = "1.0"
tokio = { version = "1.39.2", features = ["full"] }
unescape = "0.1"
wait-timeout = "0.2"
syn = "2.0.107"
quote = "1.0.41"
proc-macro2 = "1.0.101"
shell-words = "1.1.0"

[profile.dev]
split-debuginfo = "unpacked"
