[package]
name = "ewwii_plugin_api"
version = "0.3.1"
authors = ["byson94 <byson94wastaken@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "A shared library for building plugins for ewwii"
repository = "https://github.com/byson94/ewwii"
homepage = "https://github.com/byson94/ewwii"

[features]
default = ["include-gtk4", "include-rhai"]
include-gtk4 = ["gtk4"]
include-rhai = ["rhai"]

[dependencies]
rhai = {workspace = true, optional = true }
gtk4 = { workspace = true, optional = true }