[package]
name = "ewwii_shared_util"
version = "0.1.0"
authors = ["byson94 <byson94wastaken@gmail.com>"]
edition = "2021"
license = "Apache 2.0"
description = "Utility crate used in eww"
repository = "https://github.com/elkowar/eww"
homepage = "https://github.com/elkowar/eww"

[dependencies]
serde.workspace = true
derive_more.workspace = true
ref-cast.workspace = true
chrono = { workspace = true, features = ["unstable-locales"] }
