[package]
name = "iirhai-daemon"
version = "0.1.0"
authors = ["byson94 <byson94wastaken@gmail.com>"]
description = "A simple iirhai daemon that works via the ipc"
license = "Apache 2.0"
edition = "2021"
repository = "https://github.com/byson94/ewwii"
homepage = "https://github.com/byson94/ewwii"

[dependencies]
