[package]
name = "iirhai"
version = "0.1.0"
authors = ["byson94 <byson94wastaken@gmail.com>"]
edition = "2021"
license = "Apache 2.0"
description = "A simple rhai based expression language, used as a part of ewwii"
repository = "https://github.com/byson94/ewwii"
homepage = "https://github.com/byson94/ewwii"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
rhai = { version = "1.22.2", features = ["internals"] }
tokio-util.workspace = true
tokio = { workspace = true, features = ["full"] }
log.workspace = true