[package]
name = "iirhai"
version = "0.1.0"
authors = ["byson94 <byson94wastaken@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "A simple rhai based expression language, used as a part of ewwii"
repository = "https://github.com/byson94/ewwii"
homepage = "https://github.com/byson94/ewwii"

[dependencies]
rhai = { version = "1.22.2", features = ["internals"] }
ewwii_shared_util.workspace = true
anyhow.workspace = true
gtk.workspace = true
tokio-util.workspace = true
tokio = { workspace = true, features = ["full"] }
log.workspace = true
thiserror.workspace = true
colored.workspace = true
once_cell.workspace = true
sysinfo = { workspace = true }
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
chrono.workspace = true
textwrap.workspace =true
termsize.workspace = true
ahash.workspace = true
nix = { workspace = true, features = ["process", "fs", "signal"] }
