[package]
name = "iirhaixpr"
version = "0.1.0"
authors = ["byson94 <byson94wastaken@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A simple rhai based expression language, used as a part of ewwii"
repository = "https://github.com/byson94/ewwii"
homepage = "https://github.com/byson94/ewwii"

[dependencies]
eww_shared_util.workspace = true

bytesize.workspace = true
cached.workspace = true
chrono-tz.workspace = true
chrono = { workspace = true, features = ["unstable-locales"] }
itertools.workspace = true
jaq-core.workspace = true
jaq-parse.workspace = true
jaq-std.workspace = true
jaq-interpret.workspace = true
jaq-syn.workspace = true
lalrpop-util.workspace = true
once_cell.workspace = true
regex.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
static_assertions.workspace = true
strsim.workspace = true
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true
rhai = { version = "1.22.2", features = ["internals"] }
