[package]
name = "ewwii_nbcl_impl"
version = "0.1.0"
authors = ["byson94 <byson94wastaken@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "The nbcl embedded language implementation of ewwii"
repository = "https://github.com/byson94/ewwii"
homepage = "https://ewwii-sh.github.io/"

[dependencies]
ewwii_shared_utils.workspace = true
ewwii_plugin_api.workspace = true

nbcl.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
log.workspace = true
nix.workspace = true
# error handling
rand.workspace = true
codespan-reporting.workspace = true
regex.workspace = true
