[package]
name = "ewwii_plugin_api"
version = "1.0.0"
authors = ["byson94 <byson94wastaken@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "A shared library for building plugins for ewwii"
repository = "https://github.com/byson94/ewwii"
homepage = "https://ewwii-sh.github.io/"

[dependencies]
bincode.workspace = true
serde.workspace = true
rand.workspace = true