[package]
name = "ewwii_rhai_impl"
version = "0.1.0"
authors = ["byson94 <byson94wastaken@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "The rhai embedded language implementation of ewwii"
repository = "https://github.com/byson94/ewwii"
homepage = "https://ewwii-sh.github.io/"

[dependencies]
ewwii_shared_utils.workspace = true

rhai = { workspace = true, features = ["internals"] }
gtk4.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
log.workspace = true
once_cell.workspace = true
ahash.workspace = true
nix.workspace = true
# error handling
rand.workspace = true
rhai_trace = "0.3.1"
codespan-reporting.workspace = true
regex.workspace = true