[package]
name = "ewwii_shared_utils"
version = "0.2.0"
authors = ["byson94 <byson94wastaken@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "Utility crate used in ewwii"
repository = "https://github.com/ewwii-sh/ewwii"
homepage = "https://ewwii-sh.github.io/"

[dependencies]
anyhow.workspace = true
log.workspace = true
rhai = { workspace = true, features = ["internals"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
ahash.workspace = true
rand.workspace = true
regex.workspace = true
